--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.2.0"
+        "laravelcollective/html": "^5.2.0",
+        "nesbot/carbon": "1.25.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
